name:                zeitlens-blog
version:             1.1.0.2
synopsis:            ZeitLens Blog
-- description:
homepage:            http://zeitlens.com/
license:             AGPL-3
license-file:        LICENSE
author:              Albert Krewinkel
copyright:           © 2013 Albert Krewinkel
maintainer:          tarleb@moltkeplatz.de
build-type:          Simple
extra-source-files:  README.markdown
cabal-version:       >=1.10

executable zeitlens
  main-is:             ZeitLens/Blog/Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base             >=4.6  && <4.7,
                       containers       >=0.5  && <0.6,
                       bytestring       >=0.10 && <1,
                       hakyll           >=4.5  && <4.6
  hs-source-dirs:      src
  default-language:    Haskell2010

library
  exposed-modules:     ZeitLens.Blog.Abbreviations
  build-depends:       base             >=4.6  && <4.7,
                       containers       >=0.5  && <0.6,
                       bytestring       >=0.10 && <1,
                       hakyll           >=4.5  && <4.6
  hs-source-dirs:      src
  default-language:    Haskell2010
